welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: '=' expected but identifier found.
		def faireCarre(c:Color)Boolean = {
                                       ^PatternPicture:19: error: illegal start of simple expression
	faireCarre(Color.RED)
^